--- a/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/styles/task2.css
+++ b/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/styles/task2.css
@@ -227,6 +227,7 @@ html, body, #wrapper {
     body #wrapper {
         width: 99%;
         position: relative;
+        
     }
 
         body #wrapper > header {
@@ -276,7 +277,7 @@ html, body, #wrapper {
     }
 
     body #wrapper > aside div {
-        height: 0;
+        height: 100%;
         padding: 0;
         margin: 0;
     }
