--- a/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/WebApplication1/task1.css
+++ b/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/WebApplication1/task1.css
@@ -1,4 +1,10 @@
-* {
+body,
+ul,
+li,
+nav,
+div,
+span,
+a {
   margin: 0;
   padding: 0;
 }
@@ -8,7 +14,7 @@ body {
 #wrapper {
   width: 960px;
   height: 200px;
-  background: -webkit-linear-gradient(top, #002d44 0%, #77d1ff 100%);
+  background: -webkit-linear-gradient(top, #002d44 0, #77d1ff 100%);
 }
 a {
   color: black;
@@ -20,7 +26,8 @@ nav {
   font-size: 2em;
 }
 .selected {
-  background-color: red;
+  background-color: rgba(12, 31, 43, 0.5);
+  border-radius: 15px;
 }
 .selected > ul {
   position: absolute;
@@ -36,8 +43,7 @@ ul {
 }
 ul > li {
   display: inline-block;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 5px 10px;
   /*Sub Nav items*/
 }
 ul > li > ul > li {
