--- a/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/Task2/Task2.css
+++ b/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/Task2/Task2.css
@@ -17,6 +17,9 @@ body {
   width: 450px;
   margin-left: 50px;
 }
+#wrapper > a:hover {
+  color: #666666;
+}
 .invisible {
   display: none;
 }
@@ -34,15 +37,13 @@ form {
 fieldset {
   position: relative;
   border: black solid thick;
-  padding-left: 90px;
-  padding-right: 75px;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 10px 75px 10px 0;
   border-radius: 5px;
   text-align: right;
+  align-content: center;
 }
 fieldset legend {
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-style: italic;
   font-weight: bold;
   text-align: center;
@@ -51,7 +52,7 @@ fieldset legend {
 fieldset label {
   font-size: 1.2em;
   font-weight: bold;
-  width: 30px;
+  width: 80px;
 }
 fieldset input {
   width: 135px;
@@ -60,6 +61,7 @@ fieldset input {
   border-radius: 15px;
   border: none;
   margin: 5px 0;
+  color: white;
 }
 fieldset button {
   background: -webkit-linear-gradient(top, #020202 0, #fcfcfc 100%);
@@ -67,5 +69,8 @@ fieldset button {
   border: black solid 2px;
   padding: 5px 10px;
   font-size: 1em;
+}
+fieldset button:hover {
+  background: -webkit-linear-gradient(top, #000000 0, #cacaca 100%);
 }
 /*# sourceMappingURL=task2.css.map */
