--- a/HTMLCSS/Homeworks/ExamPrep/CSS-Styling-Exams-Solutions-Feb-2013-Variant-4/MySolution/Task1/task1.css
+++ b/HTMLCSS/Homeworks/ExamPrep/CSS-Styling-Exams-Solutions-Feb-2013-Variant-4/MySolution/Task1/task1.css
@@ -9,30 +9,22 @@ div {
 body {
   font-family: Constantina, Georgia, 'Nimbus Roman No9 L', serif;
   font-size: 16px;
-  width: 960px;
+  width: 985px;
+}
+.left-arrow,
+.right-arrow {
+  margin-top: 34px;
 }
 .left-arrow {
   float: left;
-  zoom: 1;
-}
-.left-arrow:after {
-  display: block;
-  content: '';
-  clear: both;
 }
 .right-arrow {
   float: right;
-  zoom: 1;
-}
-.right-arrow:after {
-  display: block;
-  content: '';
-  clear: both;
 }
 #wrapper {
   border: black solid thin;
   border-radius: 15px;
-  background: -webkit-linear-gradient(top, #de28ff 0, #f9dbff 100%);
+  background: -webkit-linear-gradient(top, #de28ff 15%, #f9dbff 75%);
   margin: 25px;
   overflow: hidden;
 }
@@ -53,6 +45,8 @@ body {
 }
 #wrapper .info {
   float: left;
-  padding: 20px 35px;
+  margin-top: -8px;
+  padding: 0 35px 31px 35px;
+  text-align: justify;
 }
 /*# sourceMappingURL=task1.css.map */
